test/conformance/chainsaw/validate/clusterpolicy/cornercases/invalid-jmespath-variable-substitution-deprecated/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: test-panic
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
