test/conformance/chainsaw/validate/clusterpolicy/cornercases/invalid-jmespath-variable-substitution-deprecated/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: variable-substitution-failure-messages
spec:
  concurrent: false
  steps:
  - name: create policy
    use:
      template: ../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: test-panic
  - name: step-02  
    try:  
    - script:  
        content: kubectl apply -f pod.yaml  
        check:  
          ($error != null): true
          (contains($stderr, 'denied the request')): true
          (contains($stderr, 'test-panic')): true
          (contains($stderr, 'jmespath value must be a string')): true
